Prevent URLs from breaking out of container

--- a/themes/hotmilk/assets/css/custom.css
+++ b/themes/hotmilk/assets/css/custom.css
@@ -52,3 +52,27 @@ th, td {
 th {
   border-bottom: 1px solid;
 }
+
+/* Prevent URLs from breaking out of container. This is a fix for displaying
+  * youtube-channel-rss-feeds on mobile, and I'm sure it breaks <code> sections
+  * in other posts.
+  *
+  * Copy&Pasta from https://css-tricks.com/snippets/css/prevent-long-urls-from-breaking-out-of-container/ */
+code {
+
+  /* These are technically the same, but use both */
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+
+  -ms-word-break: break-all;
+  /* This is the dangerous one in WebKit, as it breaks things wherever */
+  /* word-break: break-all; */
+  /* Instead use this non-standard one: */
+  word-break: break-word;
+
+  /* Adds a hyphen where the word breaks, if supported (No Blink) */
+  -ms-hyphens: auto;
+  -moz-hyphens: auto;
+  -webkit-hyphens: auto;
+  hyphens: auto;
+}
